--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.4.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3"
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "whatwg-fetch": "^3.0.0"
   }
 }
